--- a/ded-cpp/testing/xde-tests/base/CMakeLists.txt
+++ b/ded-cpp/testing/xde-tests/base/CMakeLists.txt
@@ -1,4 +1,4 @@
-project (xde_tests CXX)
+project (xde_base_tests CXX)
 
 cmake_minimum_required(VERSION 3.0)
 
@@ -7,32 +7,27 @@ enable_testing()
 
 include(${XDE_CPP_DIR}/xde-config.cmake)
 message("XDE_CPP_DIR: "  ${XDE_CPP_DIR})
-file (GLOB_RECURSE  SRC_FILES "*Test.cc")
+file (GLOB SRC_FILES "*Test.cc")
 
 include_directories(
   ${XDE_CPP_DIR}/testing/xde-tests/test-utils
-  ./test-utils
+  ../test-utils
   ${XDE_CPP_DIR}/xde
-  ${XDE_CPP_DIR}/f90/include
-  ${XDE_CPP_DIR}/muparser/include
-  ${XDE_CPP_DIR}/cvode/include
-
-  ${PROJECT_BINARY_DIR}/../../cvode/include
 
 )
 
 # Not needed for other libraries (mathstat, muparser). Maybe because they are not
 # directly under build/
-message("bin dir fot test: ${PROJECT_BINARY_DIR}")
-link_directories("${PROJECT_BINARY_DIR}/../../cvode/src/cvode")
-link_directories("${PROJECT_BINARY_DIR}/../../cvode/src/nvec_ser")
-link_directories("${PROJECT_BINARY_DIR}/../../SplineLib/src/spl")
+# message("bin dir fot test: ${PROJECT_BINARY_DIR}")
+# link_directories("${PROJECT_BINARY_DIR}/../../cvode/src/cvode")
+# link_directories("${PROJECT_BINARY_DIR}/../../cvode/src/nvec_ser")
+# link_directories("${PROJECT_BINARY_DIR}/../../SplineLib/src/spl")
 
-link_directories("${PROJECT_BINARY_DIR}/../../SplineLib/src/baf")
+# link_directories("${PROJECT_BINARY_DIR}/../../SplineLib/src/baf")
 
 
 
-find_library(PTHREAD pthread /usr/lib/x86_64-linux-gnu/)
+# find_library(PTHREAD pthread /usr/lib/x86_64-linux-gnu/)
 #find_library(XDE xde PATHS ${XDE_CPP_DIR}/build/cmake/xde)
 
 #add_compile_options("-DLINUX -DBOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS")
@@ -47,7 +42,9 @@ find_library(PTHREAD pthread /usr/lib/x86_64-linux-gnu/)
 
 
 
-add_library(test_main OBJECT test-utils/test_main.cc)
+add_library(test_main OBJECT ../test-utils/test_main.cc )
+
+
 
 foreach (i ${SRC_FILES})
     set_source_files_properties(${i} 
@@ -57,6 +54,6 @@ foreach (i ${SRC_FILES})
 
     get_filename_component(executable ${i} NAME_WE )
     add_executable(${executable}  ${i} $<TARGET_OBJECTS:test_main>)
-    target_link_libraries(${executable} xde  ${PTHREAD} ${BOOST_LIBRARIES})
+    target_link_libraries(${executable} xde   ${BOOST_LIBRARIES})
     add_test(NAME ${executable} COMMAND ${executable})
 endforeach (i ${SRC_FILES})
