--- a/ded-cpp/xde/algorithms/CMakeLists.txt
+++ b/ded-cpp/xde/algorithms/CMakeLists.txt
@@ -21,11 +21,11 @@ include_directories(
 
 )
 
-find_library(XDE_BASE xde_base ${PROJECT_BINARY_DIR}/../base)
+#find_library(XDE_BASE xde_base ${PROJECT_BINARY_DIR}/../base)
 add_library(xde_algorithms  ${LIBRARY_TYPE} ${sources} )
 
 target_link_libraries(xde_algorithms ${EXTRA_OPTIONS}
   ${BOOST_LIBRARIES}
-  ${XDE_BASE}
+ # ${XDE_BASE}
 )
 message("Done with xde_algorithms cmake.")
