--- a/ded-cpp/xde/optimizer/CMakeLists.txt
+++ b/ded-cpp/xde/optimizer/CMakeLists.txt
@@ -24,11 +24,11 @@ include_directories(
   ../../muparser/include
 )
 
-find_library(XDE_BASE xde_base ${PROJECT_BINARY_DIR}/../base)
+#find_library(XDE_BASE xde_base ${PROJECT_BINARY_DIR}/../base)
 add_library(xde_optimizer  ${LIBRARY_TYPE} ${sources} )
 
 target_link_libraries(xde_optimizer ${EXTRA_OPTIONS}
   ${BOOST_LIBRARIES}
-  ${XDE_BASE}
+  # ${XDE_BASE}
 )
 message("Done with xde_optimizer cmake.")
